[gd_scene load_steps=6 format=3 uid="uid://beglc7b5k638o"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_0fner"]
[ext_resource type="Texture2D" uid="uid://njx31wd8t7mx" path="res://images/gildedladybug.png" id="2_kt061"]
[ext_resource type="FontFile" uid="uid://ljx5j5rrcq5l" path="res://images/ud-digi-kyokasho-n-b.ttf" id="3_die2d"]
[ext_resource type="Texture2D" uid="uid://bi0cq8afs7ww8" path="res://images/credits.png" id="3_fscr6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3bht"]
bg_color = Color(0.858824, 0.643137, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fner")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_kt061")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_fscr6")

[node name="Button" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 215.5
offset_right = 90.0
offset_bottom = 256.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_die2d")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_b3bht")
text = "  BEGIN  "

[node name="Button2" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 273.5
offset_right = 90.0
offset_bottom = 314.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_die2d")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_b3bht")
text = " CREDITS "

[connection signal="button_up" from="Button" to="." method="_on_start_clicked"]
[connection signal="button_up" from="Button2" to="." method="_on_credits_clicked"]
